--- a/style/common.scss
+++ b/style/common.scss
@@ -7,4 +7,5 @@ body{
     position: relative;
     height: 100%;
     background-color: whitesmoke;
+    font-family: Adobe 黑体 Std R, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
