--- a/style/aside.scss
+++ b/style/aside.scss
@@ -32,7 +32,11 @@ $paddingCurrentLeft:13px;
     padding: 0;
 }
 
-
+#logoImg{
+    display: block;
+    width: 70%;
+    margin: 20px 0 20px 15px;
+}
 
 .asidePanelLink:link,
 .asidePanelLink:hover,
