--- a/style/aside.scss
+++ b/style/aside.scss
@@ -35,6 +35,7 @@ $paddingCurrentLeft:13px;
 #logoImg{
     display: block;
     width: 70%;
+    max-width:159px;
     margin: 20px 0 20px 15px;
 }
 
