1.fix aside width as 200px 2.try modal

--- a/style/aside.scss
+++ b/style/aside.scss
@@ -27,7 +27,7 @@ $paddingCurrentLeft:13px;
 .totalaside{
     background-color: $backColor ;
     height: 100%;
-    max-width:200px;
+    width:200px;
     position: fixed;
     padding: 0;
 }
