--- a/style/common.scss
+++ b/style/common.scss
@@ -28,3 +28,38 @@ article{
     min-height: 700px !important;
     border-radius: 5px 5px;
 }
+
+
+.dialogStyle{
+    position: absolute;
+    min-width: 400px;
+    top: 50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    border: 1px solid #e5e5e5;
+    background-color: white;
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    padding: 20px;
+}
+
+div[aria-labelledby=modal-label]{
+    position: fixed;
+    z-index: 1040;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
+div[aria-labelledby=modal-label]>div:first-child{
+//.backdropStyle  {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: auto;
+    background-color: black;
+    opacity: 0.5;
+};
