--- a/style/common.scss
+++ b/style/common.scss
@@ -21,12 +21,31 @@ body{
 
 
 article{
-    position: fixed;
     left:300px;
     top:100px;
     background-color: white;
     min-height: 700px !important;
     border-radius: 5px 5px;
+    border: 1px solid #e7e7e7;
+    padding: 0 !important;
 }
 
+.articleHeader{
+    border-bottom:2px solid #e7e7e7;
+    width: 100%;
+    padding: 0 50px;
+}
 
+.articleTitle{
+    line-height: 60px;
+    font-size: larger;
+    padding-right: 50px;
+}
+
+.articleBody{
+    padding: 20px 50px;
+}
+
+.bootstrap-select{
+    width: inherit !important;
+}
