--- a/style/common.scss
+++ b/style/common.scss
@@ -33,11 +33,14 @@ article{
 .articleHeader{
     border-bottom:2px solid #e7e7e7;
     width: 100%;
+    min-height: 60px;
     padding: 0 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .articleTitle{
-    line-height: 60px;
     font-size: larger;
     padding-right: 50px;
 }
