--- a/style/user.scss
+++ b/style/user.scss
@@ -8,7 +8,29 @@
 .userNav .container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
+
+.userNav .container a{
+    text-decoration: none;
+}
+
+.borderDiv{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border: 3px solid #0073e3;
+    border-radius: 5px;
+    height: 35px;
+}
+
+.logoDiv{
+    width: 160px;
+    margin: 0 auto;
+}
+
+
+
 
 .userForm{
     width: 350px;
